<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.MainActivity" android:theme="@style/AppTheme"
        android:background="@color/design_default_color_on_secondary">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/willkommen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.050000012"
            android:id="@+id/actMain_welcomeTitle" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <TextView
            android:text="@string/willkommen_in_der_sod_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/actMain_welcomeBody"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/actMain_welcomeTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/anmelden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/actMain_loginTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?android:attr/textColorPrimary" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/actMain_welcomeBody" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/actMain_userNameField"
            android:layout_marginTop="15dp" app:layout_constraintTop_toBottomOf="@+id/actMain_loginTitle"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" android:layout_marginEnd="10dp" android:layout_marginRight="10dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/nutzername" android:autofillHints=""/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/actMain_passwordField"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/actMain_userNameField" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="10dp" android:layout_marginStart="10dp" android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp" app:layout_constraintEnd_toEndOf="parent" android:hint="@string/passwort"
            android:autofillHints=""/>
    <Button
            android:text="@string/anmelden"
            android:layout_width="wrap_content"
            android:layout_height="48dp" android:id="@+id/actMain_loginButton"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actMain_passwordField" android:layout_marginTop="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>